; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output-pcl.c_pcl_header.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output-pcl.c_pcl_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i32, i32, i32, i32, i64, i64, i32 }

@HACK__IS_A_LJET4PJL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"\1B%-12345X@PJL\0D\0A@PJL ENTER LANGUAGE = PCL\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"\1BE\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"\1B&10e-180u36Z\00", align 1
@PCL_HAS_ORIENTATION = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"\1B&l%dO\00", align 1
@PCL_CAN_SET_PAPER_SIZE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [7 x i8] c"\1B&f%dI\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"\1B&f%dJ\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"\1B&l%dA\00", align 1
@PCL_HAS_DUPLEX = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [6 x i8] c"\1B&l1S\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"\1B&l2S\00", align 1
@.str.9 = private unnamed_addr constant [6 x i8] c"\1B&l0S\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"\1B&l0o0l0E\00", align 1
@.str.11 = private unnamed_addr constant [7 x i8] c"\1B&l%dX\00", align 1
@.str.12 = private unnamed_addr constant [12 x i8] c"\1B*rB\1B*p0x0Y\00", align 1
@PCL_END_GRAPHICS_DOES_RESET = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [7 x i8] c"\1B*t%dR\00", align 1
@.str.14 = private unnamed_addr constant [7 x i8] c"\1B&u%dD\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_4__*, i32, i32, i32, i32, i32)* @pcl_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcl_header(i32* %0, i32* %1, %struct.TYPE_4__* %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_4__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca [80 x i8], align 16
  %18 = alloca [80 x i8], align 16
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %22 = getelementptr inbounds [80 x i8], [80 x i8]* %17, i64 0, i64 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  %26 = load i32, i32* %13, align 4
  %27 = call i32 @make_init(%struct.TYPE_4__* %21, i8* %22, i32 80, i8* %25, i32 %26)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %29 = getelementptr inbounds [80 x i8], [80 x i8]* %18, i64 0, i64 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load i8*, i8** %31, align 8
  %33 = load i32, i32* %13, align 4
  %34 = call i32 @make_init(%struct.TYPE_4__* %28, i8* %29, i32 80, i8* %32, i32 %33)
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %39, label %148

39:                                               ; preds = %8
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 3
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @HACK__IS_A_LJET4PJL, align 4
  %44 = and i32 %42, %43
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %50

46:                                               ; preds = %39
  %47 = load i32*, i32** %9, align 8
  %48 = load i32*, i32** %10, align 8
  %49 = call i32 @fz_write_string(i32* %47, i32* %48, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %50

50:                                               ; preds = %46, %39
  %51 = load i32*, i32** %9, align 8
  %52 = load i32*, i32** %10, align 8
  %53 = call i32 @fz_write_string(i32* %51, i32* %52, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %54 = load i32*, i32** %9, align 8
  %55 = load i32*, i32** %10, align 8
  %56 = call i32 @fz_write_string(i32* %54, i32* %55, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 3
  %59 = load i32, i32* %58, align 4
  %60 = load i32, i32* @PCL_HAS_ORIENTATION, align 4
  %61 = and i32 %59, %60
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %70

63:                                               ; preds = %50
  %64 = load i32*, i32** %9, align 8
  %65 = load i32*, i32** %10, align 8
  %66 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %66, i32 0, i32 4
  %68 = load i32, i32* %67, align 8
  %69 = call i32 @fz_write_printf(i32* %64, i32* %65, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %68)
  br label %70

70:                                               ; preds = %63, %50
  %71 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %72 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %71, i32 0, i32 3
  %73 = load i32, i32* %72, align 4
  %74 = load i32, i32* @PCL_CAN_SET_PAPER_SIZE, align 4
  %75 = and i32 %73, %74
  %76 = icmp ne i32 %75, 0
  br i1 %76, label %77, label %106

77:                                               ; preds = %70
  %78 = load i32, i32* %15, align 4
  %79 = mul nsw i32 %78, 720
  %80 = load i32, i32* %13, align 4
  %81 = ashr i32 %80, 1
  %82 = add nsw i32 %79, %81
  %83 = load i32, i32* %13, align 4
  %84 = sdiv i32 %82, %83
  store i32 %84, i32* %19, align 4
  %85 = load i32, i32* %16, align 4
  %86 = mul nsw i32 %85, 720
  %87 = load i32, i32* %14, align 4
  %88 = ashr i32 %87, 1
  %89 = add nsw i32 %86, %88
  %90 = load i32, i32* %14, align 4
  %91 = sdiv i32 %89, %90
  store i32 %91, i32* %20, align 4
  %92 = load i32*, i32** %9, align 8
  %93 = load i32*, i32** %10, align 8
  %94 = load i32, i32* %19, align 4
  %95 = call i32 @fz_write_printf(i32* %92, i32* %93, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 %94)
  %96 = load i32*, i32** %9, align 8
  %97 = load i32*, i32** %10, align 8
  %98 = load i32, i32* %20, align 4
  %99 = call i32 @fz_write_printf(i32* %96, i32* %97, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i32 %98)
  %100 = load i32*, i32** %9, align 8
  %101 = load i32*, i32** %10, align 8
  %102 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %103 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %102, i32 0, i32 5
  %104 = load i32, i32* %103, align 4
  %105 = call i32 @fz_write_printf(i32* %100, i32* %101, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 %104)
  br label %106

106:                                              ; preds = %77, %70
  %107 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %108 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %107, i32 0, i32 3
  %109 = load i32, i32* %108, align 4
  %110 = load i32, i32* @PCL_HAS_DUPLEX, align 4
  %111 = and i32 %109, %110
  %112 = icmp ne i32 %111, 0
  br i1 %112, label %113, label %147

113:                                              ; preds = %106
  %114 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %115 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %114, i32 0, i32 7
  %116 = load i64, i64* %115, align 8
  %117 = icmp ne i64 %116, 0
  br i1 %117, label %118, label %142

118:                                              ; preds = %113
  %119 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %120 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %119, i32 0, i32 6
  %121 = load i64, i64* %120, align 8
  %122 = icmp ne i64 %121, 0
  br i1 %122, label %123, label %137

123:                                              ; preds = %118
  %124 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %125 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %124, i32 0, i32 8
  %126 = load i32, i32* %125, align 8
  %127 = icmp ne i32 %126, 0
  br i1 %127, label %132, label %128

128:                                              ; preds = %123
  %129 = load i32*, i32** %9, align 8
  %130 = load i32*, i32** %10, align 8
  %131 = call i32 @fz_write_string(i32* %129, i32* %130, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0))
  br label %136

132:                                              ; preds = %123
  %133 = load i32*, i32** %9, align 8
  %134 = load i32*, i32** %10, align 8
  %135 = call i32 @fz_write_string(i32* %133, i32* %134, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0))
  br label %136

136:                                              ; preds = %132, %128
  br label %141

137:                                              ; preds = %118
  %138 = load i32*, i32** %9, align 8
  %139 = load i32*, i32** %10, align 8
  %140 = call i32 @fz_write_string(i32* %138, i32* %139, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0))
  br label %141

141:                                              ; preds = %137, %136
  br label %146

142:                                              ; preds = %113
  %143 = load i32*, i32** %9, align 8
  %144 = load i32*, i32** %10, align 8
  %145 = call i32 @fz_write_string(i32* %143, i32* %144, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0))
  br label %146

146:                                              ; preds = %142, %141
  br label %147

147:                                              ; preds = %146, %106
  br label %148

148:                                              ; preds = %147, %8
  %149 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %150 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %149, i32 0, i32 3
  %151 = load i32, i32* %150, align 4
  %152 = load i32, i32* @PCL_HAS_DUPLEX, align 4
  %153 = and i32 %151, %152
  %154 = icmp ne i32 %153, 0
  br i1 %154, label %155, label %210

155:                                              ; preds = %148
  %156 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %157 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %156, i32 0, i32 7
  %158 = load i64, i64* %157, align 8
  %159 = icmp ne i64 %158, 0
  br i1 %159, label %160, label %210

160:                                              ; preds = %155
  %161 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %162 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %161, i32 0, i32 6
  %163 = load i64, i64* %162, align 8
  %164 = icmp ne i64 %163, 0
  br i1 %164, label %165, label %210

165:                                              ; preds = %160
  %166 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %167 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %166, i32 0, i32 2
  %168 = load i32, i32* %167, align 8
  %169 = load i32, i32* %12, align 4
  %170 = sdiv i32 %168, %169
  %171 = srem i32 %170, 2
  %172 = icmp eq i32 %171, 0
  br i1 %172, label %173, label %202

173:                                              ; preds = %165
  %174 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %175 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %174, i32 0, i32 2
  %176 = load i32, i32* %175, align 8
  %177 = icmp ne i32 %176, 0
  br i1 %177, label %178, label %192

178:                                              ; preds = %173
  %179 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %180 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %179, i32 0, i32 3
  %181 = load i32, i32* %180, align 4
  %182 = load i32, i32* @PCL_CAN_SET_PAPER_SIZE, align 4
  %183 = and i32 %181, %182
  %184 = icmp ne i32 %183, 0
  br i1 %184, label %185, label %192

185:                                              ; preds = %178
  %186 = load i32*, i32** %9, align 8
  %187 = load i32*, i32** %10, align 8
  %188 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %189 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %188, i32 0, i32 5
  %190 = load i32, i32* %189, align 4
  %191 = call i32 @fz_write_printf(i32* %186, i32* %187, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 %190)
  br label %192

192:                                              ; preds = %185, %178, %173
  %193 = load i32*, i32** %9, align 8
  %194 = load i32*, i32** %10, align 8
  %195 = call i32 @fz_write_string(i32* %193, i32* %194, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0))
  %196 = load i32*, i32** %9, align 8
  %197 = load i32*, i32** %10, align 8
  %198 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %199 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %198, i32 0, i32 0
  %200 = load i8*, i8** %199, align 8
  %201 = call i32 @fz_write_string(i32* %196, i32* %197, i8* %200)
  br label %209

202:                                              ; preds = %165
  %203 = load i32*, i32** %9, align 8
  %204 = load i32*, i32** %10, align 8
  %205 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %206 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %205, i32 0, i32 1
  %207 = load i8*, i8** %206, align 8
  %208 = call i32 @fz_write_string(i32* %203, i32* %204, i8* %207)
  br label %209

209:                                              ; preds = %202, %192
  br label %234

210:                                              ; preds = %160, %155, %148
  %211 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %212 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %211, i32 0, i32 3
  %213 = load i32, i32* %212, align 4
  %214 = load i32, i32* @PCL_CAN_SET_PAPER_SIZE, align 4
  %215 = and i32 %213, %214
  %216 = icmp ne i32 %215, 0
  br i1 %216, label %217, label %224

217:                                              ; preds = %210
  %218 = load i32*, i32** %9, align 8
  %219 = load i32*, i32** %10, align 8
  %220 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %221 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %220, i32 0, i32 5
  %222 = load i32, i32* %221, align 4
  %223 = call i32 @fz_write_printf(i32* %218, i32* %219, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 %222)
  br label %224

224:                                              ; preds = %217, %210
  %225 = load i32*, i32** %9, align 8
  %226 = load i32*, i32** %10, align 8
  %227 = call i32 @fz_write_string(i32* %225, i32* %226, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0))
  %228 = load i32*, i32** %9, align 8
  %229 = load i32*, i32** %10, align 8
  %230 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %231 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %230, i32 0, i32 0
  %232 = load i8*, i8** %231, align 8
  %233 = call i32 @fz_write_string(i32* %228, i32* %229, i8* %232)
  br label %234

234:                                              ; preds = %224, %209
  %235 = load i32*, i32** %9, align 8
  %236 = load i32*, i32** %10, align 8
  %237 = load i32, i32* %12, align 4
  %238 = call i32 @fz_write_printf(i32* %235, i32* %236, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i64 0, i64 0), i32 %237)
  %239 = load i32*, i32** %9, align 8
  %240 = load i32*, i32** %10, align 8
  %241 = call i32 @fz_write_string(i32* %239, i32* %240, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.12, i64 0, i64 0))
  %242 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %243 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %242, i32 0, i32 3
  %244 = load i32, i32* %243, align 4
  %245 = load i32, i32* @PCL_END_GRAPHICS_DOES_RESET, align 4
  %246 = and i32 %244, %245
  %247 = icmp ne i32 %246, 0
  br i1 %247, label %248, label %259

248:                                              ; preds = %234
  %249 = load i32*, i32** %9, align 8
  %250 = load i32*, i32** %10, align 8
  %251 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %252 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %251, i32 0, i32 0
  %253 = load i8*, i8** %252, align 8
  %254 = call i32 @fz_write_string(i32* %249, i32* %250, i8* %253)
  %255 = load i32*, i32** %9, align 8
  %256 = load i32*, i32** %10, align 8
  %257 = load i32, i32* %12, align 4
  %258 = call i32 @fz_write_printf(i32* %255, i32* %256, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i64 0, i64 0), i32 %257)
  br label %259

259:                                              ; preds = %248, %234
  %260 = load i32*, i32** %9, align 8
  %261 = load i32*, i32** %10, align 8
  %262 = load i32, i32* %13, align 4
  %263 = call i32 @fz_write_printf(i32* %260, i32* %261, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.13, i64 0, i64 0), i32 %262)
  %264 = load i32*, i32** %9, align 8
  %265 = load i32*, i32** %10, align 8
  %266 = load i32, i32* %13, align 4
  %267 = call i32 @fz_write_printf(i32* %264, i32* %265, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.14, i64 0, i64 0), i32 %266)
  %268 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %269 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %268, i32 0, i32 2
  %270 = load i32, i32* %269, align 8
  %271 = add nsw i32 %270, 1
  store i32 %271, i32* %269, align 8
  ret void
}

declare dso_local i32 @make_init(%struct.TYPE_4__*, i8*, i32, i8*, i32) #1

declare dso_local i32 @fz_write_string(i32*, i32*, i8*) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
